duel reset couldown on start duel

--- a/src/server/worldserver/worldserver.conf.dist
+++ b/src/server/worldserver/worldserver.conf.dist
@@ -3194,3 +3194,16 @@ PacketSpoof.BanDuration = 86400
 
 #
 ###################################################################################################
+
+###################################################################################################
+
+###################################################################################################
+# OTHER
+#
+#    DuelResetCooldown
+#		Description: Reseting cooldown and restore health to start duel
+#		Default: 1 - Enable
+#
+ 
+ DuelResetCooldown = 1
+
