other npc add and add sql files

--- a/src/server/scripts/Custom/CMakeLists.txt
+++ b/src/server/scripts/Custom/CMakeLists.txt
@@ -17,6 +17,7 @@ set(scripts_STAT_SRCS
     Custom/Transmog/Transmogrification.cpp
     Custom/Transmog/Transmogrifier.cpp
     Custom/arena_spectator.cpp
+    Custom/npc_other.cpp
 )
 
 message("  -> Prepared: Custom")
